--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Restaurant in Patna</title>
     <!-- inluding external css file -->
-    <link rel="stylesheet" href="/project2.css">
+    <link rel="stylesheet" href="project2.css">
     <!-- for responsiveness -->
-    <link rel="stylesheet" media="screen and (min-width:406px) and (max-width:1450px)" href="/res.css">
-    <link rel="stylesheet" media="screen and  (max-width:406px)" href="/res2.css">
+    <link rel="stylesheet" media="screen and (min-width:406px) and (max-width:1450px)" href="res.css">
+    <link rel="stylesheet" media="screen and  (max-width:406px)" href="res2.css">
 
 
     <!-- for fonts -->
