--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header id="header">
         <div>
             <!-- logo -->
-            <img src="../images/logo-p2.jpg" alt="">
+            <img src="images/logo-p2.jpg" alt="">
             <h6>FOODIES &nbsp; VILLA </h6>
         </div>
     </header>
